ver 2.9.6 (15.09.01)
    : 그누보드5 - 이미지 새창 (엑노님 제안)
    : 카테고리탭에서 div 태그 제거 (신비님 제안)


    mw.basic/HISTORY
    mw.basic/mw.proc/mw.file.viewer.php
    mw.basic/list.skin.php
    mw.basic/write.skin.php

ver 2.9.5 (15.07.01)
    : 디자인 개선
    : QR코드 구글 도메인 변경 (엑노님 제안)
    : SNS퍼가기 구글플러스 추가
    : SNS퍼가기 아이콘 변경
    : PHP_SELF 를 SCRIPT_NAME 으로 변경
    : 썸네일 라운드효과 옵션처리
    : mwt.so 짧은도메인 제거
    : 그누보드5 dhtml 에디터, 관리자만 에디터 사용체크시 오류 (l2zeo님 제안)
    : 그누보드5 퍼머링크 분류 페이징 오류 수정 (백색인간님 제안)
    : 그누보드5 댓글삭제시 포인트삭제 안되는 문제 해결 (그루루님 제안)
    : 그누보드5 글주소복사시 깜빡임 문제 해결 (그루루님 제안)
    : 그누보드5 문자발송시 write_log 오류수정
    : 그누보드5 댓글수정오류
    : 그누보드5 분류 이동 오류 수정
    : 그누보드5 전용 썸네일 생성 (엑노님 제안)

    mw.basic/HISTORY
    mw.basic/mw.adm/mw.config.php
    mw.basic/mw.adm/mw.config.update.php
    mw.basic/mw.adm/mw.upgrade.php
    mw.basic/mw.adm/mw.category.move.php
    mw.basic/mw.adm/mw.level.php
    mw.basic/mw.adm/mw.board.member.php
    mw.basic/mw.adm/mw.level.php
    mw.basic/mw.geditor/upload.php
    mw.basic/mw.proc/mw.intercept.table.php
    mw.basic/mw.proc/mw.proc.sms.php
    mw.basic/mw.proc/mw.notice.top.php
    mw.basic/mw.proc/mw.top.button.php
    mw.basic/mw.proc/mw.asset.php
    mw.basic/mw.proc/mw.smart-alarm-config.php
    mw.basic/mw.proc/mw.good.list.php
    mw.basic/mw.proc/mw.vote.list.php
    mw.basic/mw.lib/mw.function.lib.php
    mw.basic/mw.okname/ipin1.php
    mw.basic/img/send_facebook.png
    mw.basic/img/send_twitter.png
    mw.basic/img/send_google_plus.png
    mw.basic/img/send_google.png
    mw.basic/img/send_naver.png
    mw.basic/img/send_kakakostory.png
    mw.basic/img/send_kakakotalk.png
    mw.basic/list.skin.php
    mw.basic/view.skin.php
    mw.basic/view_head.skin.php
    mw.basic/view_comment.skin.php
    mw.basic/write.skin.php
    mw.basic/style.common.css
    mw.basic/sideview.css

ver 2.9.4 (15.06.01)
    : 그누보드5 - 다운로드 포인트 차감 오류 해결 (용자님 제안)
    : 관련글 타게시판 여러개 입력시 오류 수정 (도장관님 제안)
    : 작성자 검색 레벨 설정 오류 수정 (신비님 제안)
    : 분류 라디오버튼 사용시 키값재정렬 (상상처럼님 제안)